Apr 29, 2010 - chris
o ham_env_get_parameters and ham_get_parameters do no longer accept
    NULL pointers as the first parameter; instead, they will fail with
    HAM_INV_PARAMETER

Apr 22, 2010 - chris
o Fixed compilation for MacOSX SnowLeopard (thanks, Olisa)

Apr 13, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.4

Apr 10, 2010 - chris
o The documentation in the header file was improved and some constants
    were renamed/deprecated

Apr 10, 2010 - chris
o Bugfix - win32 only: with very big databases and unlimited cache, resources
    were exceeded and mmap failed. in this case we'll now fall back to 
    read/write (thanks, Simon)

Mar 27, 2010 - chris
o Bugfix - it was allowed to create temp. Transactions while a non-temp.
	Transaction was still active

Mar 18, 2010 - chris
o Optimization - if HAM_DAM_SEQUENTIAL_INSERT is set then btree nodes will
    not be split in the middle, but at the end of the node. hamsterdb will
    also auto-recognize if an insert is sequential (at the "right end" of 
    the index). This leads to MUCH smaller files and therefore higher
    performance (thanks, Simon)

Mar 10, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.3

Mar 10, 2010 - chris
o Bugfix - fixed an invalid read of 3 bytes in the freelist

Mar 07, 2010 - chris
o Implemented partial read/write - records can now be read or written 
    partially (see flag HAM_PARTIAL for ham_find, ham_insert and others)
    This new feature caused a change to ham_record_t, thus making the ABI
    of hamsterdb incompatible to older versions. This feature is test-covered
    by nearly 900 unittests.

Feb 27, 2010 - chris
o Bugfix - ham_get_parameter failed if database was opened read-only
    (thanks, Austin)

Feb 18, 2010 - chris
o Bugfix - if a cachesize was specified then it was not propagated correctly